[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrest-octoprint"
version = "0.0.1"
description = "Pythonic Wrapper for OctoPrint REST API"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "urllib3==2.6.3",
]
authors = [
  {name = "Miles Dustin", email = "milesdustin45@gmail.com"},
]

[project.urls]
Repository = "https://github.com/readrawhex/pyrest-octoprint/pyrest-octoprint.git"
